--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -177,6 +177,14 @@
     height: 0;
   }
 
+  .preview__content--header-hidden & {
+    padding: 2px;
+
+    .print__header {
+      display: none;
+    }
+  }
+
   .scaler-wrapper { 
     position: absolute;
     width: 100%;
