--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -464,6 +464,12 @@ body > main {
     .button {
       box-shadow: inset 0 1px 0 0 #fff3;
     }
+
+    .preview__layout {
+      margin: 0 auto;
+      display: flex;
+      gap: 2px;
+    }
   
     .visibility__form {
       margin: 0 auto 0 8px;
@@ -471,8 +477,11 @@ body > main {
       gap: 8px;
     }
   
-    .preview__layout [data-tooltip]::before {content: 'Maximize'; }
-    .preview__layout input:checked + [data-tooltip]::before { content: 'Minimize'; }
+    .preview__layout #label-expanded[data-tooltip]::before {content: 'Maximize'; }
+    .preview__layout input:checked + #label-expanded[data-tooltip]::before { content: 'Minimize'; }
+
+    .preview__layout #label-header[data-tooltip]::before {content: 'Show Headers'; }
+    .preview__layout input:checked + #label-header[data-tooltip]::before { content: 'Hide headers'; }
   
     .visibility__form [data-tooltip]::before { content: 'Show ' attr(data-tooltip); }
     .visibility__form input:checked + [data-tooltip]::before { content: 'Hide ' attr(data-tooltip); }
